dashboard: upgrade to jdk21