@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.3</version>
+        <version>3.2.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>build.bazel</groupId>
@@ -15,7 +15,7 @@
     <description>The server for the dashboard</description>
 
     <properties>
-        <java.version>20</java.version>
+        <java.version>21</java.version>
         <project.version>DEV</project.version>
     </properties>
 
@@ -108,7 +108,6 @@
                 <configuration>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <arg>--add-modules=jdk.incubator.concurrent</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -116,14 +115,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview --add-modules=jdk.incubator.concurrent</argLine>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>--enable-preview --add-modules=jdk.incubator.concurrent -Djdk.tracePinnedThreads</jvmArguments>
+                    <jvmArguments>--enable-preview -Djdk.tracePinnedThreads</jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
